# robust-financial-denoiser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PROJECT_CLEANUP_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ADVANCED_MATH.md  BACKGROUND.md  INSTALL.md  PRODUCTION.md  USAGE.md
examples/: compare_denoisers.py  create_simple_plot.py  denoised.config.json  denoised.csv  download_data.py  generate_sample_10k.py  get_stats.py  goog_1m.csv  goog_denoised.config.json  goog_denoised.csv  goog_denoised_smooth.config.json  goog_denoised_smooth.csv  goog_final_test.config.json  goog_test_identity.config.json  goog_test_identity.csv  make_plot.py  plot_real_data.py  plot_real_data_robust.py  plot_summary.py  sample_ticks_10k.csv  view_results.py
src/rpsd/: __init__.py  cli.py  config.py  data.py  denoise.py  denoise_robust.py  evaluation.py  features.py  rough_path.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_denoise.py  test_evaluation.py  test_features.py  test_features_bounds.py  test_rough_path.py
