[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpsd"
version = "1.0.0"
description = "Robust financial time series denoiser with identity contract and mathematical precision"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "RPSD Contributors"}]
keywords = ["financial", "denoising", "rough-paths", "signal-processing", "mathematical-finance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "scipy>=1.13,<2.0",
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "joblib>=1.4,<2.0",
  "tqdm>=4.66,<5.0",
  "matplotlib>=3.9,<4.0",
  "yfinance>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "mypy>=1.10,<2.0",
  "ruff>=0.5.6,<0.6",
  "black>=24.8.0,<25.0.0",
  "pre-commit>=3.8,<4.0",
]

[project.scripts]
rpsd = "rpsd.cli:app"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","SIM","C90"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --maxfail=1"
